ftl fix text align

--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,6 @@ button.button:hover {
   font-size: 64px;
   font-weight: bold;
   line-height: 64px;
-  text-align: left;
   color: var(--title-color);
   margin-top: 0;
   margin-bottom: 30px;
@@ -216,7 +215,6 @@ button.button:hover {
 .hero__description {
   font-size: 18px;
   line-height: 32px;
-  text-align: left;
   color: var(--title-color);
   margin-bottom: 26px;
 }
@@ -259,7 +257,6 @@ button.button:hover {
   font-size: 50px;
   font-weight: bold;
   line-height: 60px;
-  text-align: left;
   color: #000;
   margin-bottom: 20px;
 }
@@ -267,7 +264,6 @@ button.button:hover {
   max-width: 555px;
   font-size: 20px;
   line-height: 32px;
-  text-align: left;
   color: #000;
   letter-spacing: -0.2px;
 }
@@ -406,14 +402,12 @@ button.button:hover {
 .modal__label {
   font-size: 13px;
   line-height: 18px;
-  text-align: left;
   color: #1f252d;
 }
 .modal__input {
   padding: 16px;
   border-radius: 5px;
   background-color: #f3f5f6;
-  text-align: left;
   box-shadow: none;
   border: none;
 }
